# git-tag-trace

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  requirements.txt  start.bat  test_html.py
docs/: gitsearch_guia.md
gitsearch/: __init__.py  __main__.py  engine.py  filters.py  html_builder.py  incremental.py  strategy.py  template.py
tests/: test_engine.py  test_filters.py  test_html_builder.py  test_incremental.py  test_main.py  test_strategy.py
