[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "git-tag-trace"
version = "0.1.0"
description = "Offline Git repository technical analyzer with interactive HTML visualization"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Your Name", email = "you@example.com"}]
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "gitpython>=3.1.40",
    "python-dotenv>=1.0.0",
]

[project.scripts]
git-tag-trace = "gitsearch.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["gitsearch"]

[dependency-groups]
dev = [{include-group = "lint"}, {include-group = "test"}]
lint = ["ruff", "ty"]
test = ["pytest", "pytest-cov"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",          # pydocstyle
    "COM812",     # trailing comma
    "ISC001",     # implicit string concatenation
    "E501",       # line too long (existing codebase)
    "BLE001",     # blind except (existing codebase)
    "T201",       # print found (existing codebase)
    "PLR0912",    # too many branches
    "PLR0915",    # too many statements
    "C901",       # too complex
    "ANN401",     # dynamically typed Any
    "N806",       # uppercase variable
    "S110",       # try-except-pass
    "TRY300",     # try except return
    "FURB110",    # ternary with or
    "FURB188",    # removeprefix
    "PLW2901",    # for loop overwrite
    "ARG001",     # unused argument
    "DTZ006",     # datetime without tz
    "W291",       # trailing whitespace
    "W293",       # blank line whitespace
    "Q000",       # quote style
    "PLR2004",    # magic value comparison
    "RET504",     # unnecessary assignment
    "PLC0415",    # import not at top
    "S112",       # try-except-continue
    "DTZ005",     # datetime.now without tz
    "PERF401",    # use list.extend
    "EM102",      # exception f-string
    "EM101",      # exception string
    "TRY003",     # long messages outside exception
    "FURB171",    # membership test
    "N818",       # exception name suffix
    "PIE790",     # unnecessary pass
    "S101",       # assert (in tests)
    "DTZ007",     # naive datetime strptime
]

[tool.pytest]
addopts = ["--cov=gitsearch", "--cov-fail-under=0"]

[tool.ty.terminal]
error-on-warning = true

[tool.ty.environment]
python-version = "3.11"

[tool.ty.rules]
possibly-unresolved-reference = "warn"
unused-ignore-comment = "warn"
